--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,3 +46,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.android.material:material:1.0.0'
 }
+
+// ✅ Forcer la compatibilité JVM entre Java et Kotlin
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
