--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -66,3 +66,10 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+// ✅ Forcer la compatibilité JVM entre Java et Kotlin
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
