--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -67,9 +67,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
 
-// ✅ Forcer la compatibilité JVM entre Java et Kotlin
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = "1.8"
+// ✅ Nouvelle configuration Kotlin avec jvmToolchain
+kotlin {
+    jvmToolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
     }
 }
+
+
