--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,11 @@ android {
     namespace "yukams.app.background_locator_2"
     compileSdkVersion 33
 
+    // ✅ C'est CE BLOC QUI MANQUAIT
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 33
@@ -25,6 +30,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
     implementation "com.google.android.gms:play-services-location:21.0.1"
@@ -32,9 +38,3 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 }
 
-// ✅ Kotlin JVM Toolchain moderne
-kotlin {
-    jvmToolchain {
-        languageVersion.set(JavaLanguageVersion.of(8))
-    }
-}
