--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -7,8 +7,13 @@ group 'yukams.app.background_locator_example'
 version '1.0-SNAPSHOT'
 
 android {
-    namespace "yukams.app.background_locator_example"
+    namespace "yukams.app.background_locator_2"
     compileSdkVersion 33
+
+    // ✅ C'est CE BLOC QUI MANQUAIT
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
     defaultConfig {
         minSdkVersion 19
@@ -25,6 +30,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7"
     implementation "com.google.android.gms:play-services-location:21.0.1"
@@ -32,9 +38,3 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 }
 
-// ✅ Kotlin JVM Toolchain moderne
-kotlin {
-    jvmToolchain {
-        languageVersion.set(JavaLanguageVersion.of(8))
-    }
-}
