--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,5 @@ org.gradle.jvmargs=-Xmx1536M
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=/usr/local/Cellar/openjdk@11/11.0.28/libexec/openjdk.jdk/Contents/Home
+
