--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -10,9 +10,13 @@ android {
     namespace "yukams.app.background_locator_2"
     compileSdkVersion 33
 
-    // ✅ C'est CE BLOC QUI MANQUAIT
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+
     kotlinOptions {
-         jvmTarget = "11"
+        jvmTarget = "11"
     }
 
     defaultConfig {
@@ -20,6 +24,7 @@ android {
         targetSdkVersion 33
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
